--- a/javascript/DOM/prime.html
+++ b/javascript/DOM/prime.html
@@ -6,22 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="cowin_script.js"></script>
+    <script src="prime_script.js"></script>
 </head>
 
 <body>
-
     <div class="container">
         <div class="row mt-5">
-            <div class="col-4"> Cowin Registration</div>
-            <div class="col-4">
-                <input type="text" id="age" placeholder="Enter Age">
-                <button class="btn btn-primary" onclick="checkAge()">Submit</button>
+            <div class="col-6">Prime Numbers b/w 2 limits</div>
+            <div class="col-6">
+                <input type="text" id="num1" placeholder="Enter lower limit">
+                <input type="text" id="num2" placeholder="Enter upper limit">
+
+                <div class="col-4">
+                    <button class="btn btn-primary" onclick="primeNumbers()">Display</button>
+
+                </div>
+                
             </div>
-            <div class="col-4"></div>
         </div>
         <div class="row">
             <div class="col-4"></div>
@@ -29,9 +32,6 @@
             <div class="col-4"></div>
         </div>
     </div>
-
-
-
 </body>
 
 </html>
