--- a/javascript/DOM/BankApp/bank_index.html
+++ b/javascript/DOM/BankApp/bank_index.html
@@ -5,30 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="bank_script.js"></script>
 </head>
 <body>
     <input type="text" id="ac_no" placeholder="Account number"><br>
     <input type="text" id="pwd" placeholder="Password"><br>
     <input type="text" id="bal" placeholder="Balance"><br>
     <button onclick="createUser()">Create</button>
-    
+    <button onclick="listAllUsers()">List Users</button>
+    <div id="resultarea"></div>
     
     <script>
 
-function createUser(){
-let account_number=ac_no.value
-let password=pwd.value
-let balance=bal.value
-let user={
-    account_number:account_number,
-    password:password,
-    balance:balance
-}
-localStorage.setItem(user.account_number,JSON.stringify(user))
-alert("User Created")
-location.reload(true)
-//localStorage.clear();
-}
+
     </script>
 </body>
 </html>
